# nlp_tflite

./: README.md
char-rnn/: README.md  checkpoint_to_pb.py  config.py  convert_to_tflite.py  data_helper.py  log.py  metrics.py  model.py  predict.py  trainer.py
char-rnn/output/: label_to_index.txt  word_to_index.txt
cpp_tflite/: CMakeLists.txt
cpp_tflite/include/tensorflow/lite/examples/label_image/: bitmap_helpers.h  bitmap_helpers_impl.h  get_top_n.h  get_top_n_impl.h  label_image.h
cpp_tflite/src/: inference.cpp  inference.h
